# agus-maps-flutter

./: .gitattributes  .gitignore  AGENTS.md  GUIDE.md  NOTICE  README.md  bitrise.yml  ffigen.yaml  pubspec.yaml  vcpkg.json
.github/workflows/: devops.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/app/agus/maps/agus_maps_flutter/: AgusMapsFlutterPlugin.java
docs/: ARCHITECTURE-ANDROID.md  COMAPS-ASSETS.md  CONTRIBUTING.md  IMPLEMENTATION-ANDROID.md  IMPLEMENTATION-CI-CD.md  IMPLEMENTATION-IOS.md  IMPLEMENTATION-MACOS.md  IMPLEMENTATION-WIN.md  ISSUE-macos-resize-white-screen.md  RELEASE.md  RENDER-LOOP.md
example/: README.md  pubspec.yaml
example/android/: gradle.properties
example/android/app/: build.gradle.kts  proguard-rules.pro
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/app/agus/maps/agus_maps_flutter_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: about_tab.dart  downloads_tab.dart  main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: agus_maps_flutter.podspec
ios/Classes/: AgusBridge.h  AgusMapsFlutterPlugin.swift  AgusMetalContextFactory.mm  agus_maps_flutter.c  agus_maps_flutter_ios.mm
lib/: agus_maps_flutter.dart  agus_maps_flutter_bindings_generated.dart  mwm_storage.dart
linux/: CMakeLists.txt
macos/: agus_maps_flutter.podspec
macos/Classes/: AgusBridge.h  AgusMapsFlutterPlugin.swift  AgusMetalContextFactory.mm  agus_maps_flutter_macos.mm
patches/comaps/: 0001-fix-cmake.patch  0002-platform-directory-resources.patch  0003-transliteration-directory-resources.patch  0004-fix-android-gl-function-pointers.patch  0005-libs-map-framework-cpp.patch  0006-libs-map-routing_manager-cpp.patch  0007-libs-routing-routing_session-cpp.patch  0008-libs-routing-speed_camera_manager-cpp.patch  0009-fix-android-gl3stub-include-path.patch  0010-fix-ios-cmake-missing-files.patch  0011-3party-icu-CMakeLists-txt.patch  0012-active-frame-callback.patch  0015-libs-platform-platform_mac-mm.patch  0016-libs-search-CMakeLists-txt.patch  0017-libs-shaders-metal_program_pool-mm.patch  0018-fix-shutdown-threads-null-safety.patch  0019-vulkan-windows-surface.patch  0021-3party-CMakeLists-txt.patch  0022-3party-freetype-CMakeLists-txt.patch  0023-3party-jansson-jansson.patch  0024-3party-jansson-jansson_config-h.patch  0025-3party-opening_hours-rules_evaluation-cpp.patch  0026-3party-protobuf-CMakeLists-txt.patch  0028-libs-base-logging-cpp.patch  0029-libs-base-string_utils-hpp.patch  0030-libs-base-thread_checker-cpp.patch  0031-libs-base-thread_checker-hpp.patch  0032-libs-base-timer-cpp.patch  0033-libs-drape-drape_tests-gl_functions-cpp.patch  0034-libs-drape-dynamic_texture-hpp.patch  0035-libs-drape-framebuffer-hpp.patch  0036-libs-drape-gl_functions-hpp.patch  0037-libs-drape-shader-cpp.patch  0038-libs-drape-texture-hpp.patch  0039-libs-drape-tm_read_resources-hpp.patch  0040-libs-drape-vertex_array_buffer-cpp.patch  0041-libs-drape_frontend-frontend_renderer-cpp.patch  0042-libs-indexer-categories_holder-cpp.patch  0043-libs-drape_frontend-frontend_renderer-cpp.patch  0043-libs-indexer-editable_map_object-cpp.patch  (+27 more)
scripts/: BootstrapCommon.psm1  apply_comaps_patches.ps1  apply_comaps_patches.sh  bootstrap.ps1  bootstrap.sh  bootstrap_android.ps1  bootstrap_android.sh  bootstrap_common.sh  bootstrap_ios.sh  bootstrap_macos.sh  bootstrap_windows.ps1  build_all.ps1  build_binaries_android.ps1  build_binaries_windows.ps1  copy_comaps_data.ps1  copy_comaps_data.sh  download_base_mwms.sh  fetch_comaps.ps1  fetch_comaps.sh  regenerate_patches.ps1  validate_patches.ps1
src/: AgusVulkanContextFactory.cpp  AgusVulkanContextFactory.hpp  AgusWglContextFactory.cpp  AgusWglContextFactory.hpp  CMakeLists.txt  agus_maps_flutter.c  agus_maps_flutter.cpp  agus_maps_flutter.h  agus_maps_flutter_win.cpp  agus_platform_win.cpp
windows/: CMakeLists.txt  agus_maps_flutter_plugin.cpp
windows/include/agus_maps_flutter/: agus_maps_flutter_plugin_c_api.h
